--- a/edb_training/0.commands.md
+++ b/edb_training/0.commands.md
@@ -28,12 +28,18 @@ All databases:
 -- Default: 5432
 =# show port;
 
--- Show postgresql databases
--- oid is the same number as the directory inside the base directory
-=# SELECT oid, datname FROM pg_database;
+-- Show all postgresql configuration
+=# show all;
 
 -- Show postgresql information
 =# \conninfo
+
+-- Execute some linux command
+=# \! <command>
+
+-- Show postgresql databases
+-- oid is the same number as the directory inside the base directory
+=# SELECT oid, datname FROM pg_database;
 
 -- Show directory where table/index is located inside the os system
 =# SELECT pg_relation_filepath('tablename');
@@ -49,8 +55,16 @@ All databases:
 
 -- List of parameters apply to the session
 =# \d pg_settings
+
+-- Change user default password
+=# ALTER USER postgres WITH PASSWORD 'password';
+
+-- Set Autocommit off
+=# \set AUTOCOMMIT off
 ```
 
 ```bash
-
+$> sytemctl status postgresql-<version>
+$> systemctl enable postgresql-<version>
+$> systemctl start postgresql-<version>
 ```
