--- a/edb_training/3.installation.md
+++ b/edb_training/3.installation.md
@@ -12,7 +12,7 @@ On the installation, also, install the `contrib` package (or check if it's possi
 $> su - postgres
 ```
 
-Change the authentication method to md5 in `pg_hba.conf` and reload the server.
+Change the authentication method to md5 / scram-sha-256 in `pg_hba.conf` and reload the server.
 
 ```bash
 $> nvim /var/lib/psql/<version>/data/pg_hba.conf
