--- a/edb_training/5.database_clusters.md
+++ b/edb_training/5.database_clusters.md
@@ -21,7 +21,7 @@ A cluster can contain multiple databases.
 -E, --encoding
 -U, --username
 -W, --pwprompt
--X, --waldir=, --wal-segsize
+-X, --waldir, --wal-segsize
 
 ## Starting a Database Cluster
 
@@ -31,3 +31,17 @@ A cluster can contain multiple databases.
 ## Connecting to a Database Cluster
 
 `psql` is the default cli client to access postgresql.
+
+## Stopping a Database Cluster
+
+```bash
+pg_ctl stop -D /var/lib/pgsql/<version>/data -m <shutdown_mode>
+```
+
+Types of shutdown modes:
+
+- smart
+- Fast
+- immediate
+
+pg_controldata: can be used to view the control information
